--- a/templates/register.html
+++ b/templates/register.html
@@ -91,10 +91,18 @@
             </tr>
           <tr>
             <td class="td1">
-              Address
+              Address 1
             </td>
             <td class="td2">
-              <input type="text" name="address" value="{$address}" style="width:200px;" class="textbox">
+              <input type="text" name="address1" value="{$address1}" style="width:200px;" class="textbox">
+            </td>
+          </tr>
+          <tr>
+            <td class="td1">
+              Address 2
+            </td>
+            <td class="td2">
+              <input type="text" name="address2" value="{$address2}" style="width:200px;" class="textbox">
             </td>
           </tr>
           <tr>
