--- a/templates/admin/payment.html
+++ b/templates/admin/payment.html
@@ -24,7 +24,7 @@ function change_currency()
     
   if(!currency_id)
   {
-    alert("Not currency selcted");
+    alert("No currency selected");
   }
   else
   {
@@ -113,7 +113,7 @@ function change_currency()
                   <td class="td_data_middle" style="height:30px;">2.</td>
                   <td class="td_data_middle" style="text-align:left;padding-left:5px;">Paypal Subscibe</td>  
                   <td class="td_data_middle">
-                    {if $paypal_subscribe_status}<font color="green">Enable</font>{else}<font color="red">Disable</font>{/if}
+                    {if $paypal_subscribe_status}<font color="green">Enabled</font>{else}<font color="red">Disabled</font>{/if}
                     <input type="hidden" name="paypal_subscribe_status" value="{$paypal_subscribe_status}">
                   </td>
                   <td class="td_data_middle"><a href="payment.php?pf=gateway_setting&gateway_name=paypal_subscribe">Setting</a></td>
