added some more code for managing extensions

--- a/templates/admin/header.html
+++ b/templates/admin/header.html
@@ -54,7 +54,7 @@ $(".view_detail").tooltip({
       <table align="left" style="margin-left:10px;">
         <tr>
           <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
-            Welcome to Admin area
+            Welcome to the Admin section
           </td>
         </tr>
       </table>
