--- a/templates/admin/confirm_delete.html
+++ b/templates/admin/confirm_delete.html
@@ -1,10 +1,9 @@
 {include file="admin/header.html"}     
 {literal}
-<script language="javascript">
-  function _cancel()
-  {
-    window.location.href='product.php';
-  }
+<script>
+function _cancel() {
+  window.location.href = 'product.php';
+}
 </script>
 {/literal}
   <tr>
