--- a/templates/admin/extension.html
+++ b/templates/admin/extension.html
@@ -51,8 +51,8 @@
                 {/if}                 
                 {if !$listeners}
                 <tr>
-                  <td colspan="5" style="font-size:11px;text-align:center;color:red;">
-                    ======== No listeners registered ========
+                  <td colspan="5" class="generic-warning">
+                    No listeners registered
                   </td>
                 </tr>
                 {else}
