--- a/templates/admin/header.html
+++ b/templates/admin/header.html
@@ -1,7 +1,7 @@
 <!-- begin :: header -->
 <html>
 <head>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="../style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../lib/js/jquery.tooltip.css" />
 <title>ArOS Admin - {$site_name}</title>
 {literal}
@@ -53,8 +53,8 @@ $(".view_detail").tooltip({
     <td>
       <table align="left" style="margin-left:10px;">
         <tr>
-          <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
-            Welcome to the Admin section
+          <td class="masthead-text">
+            Admin section
           </td>
         </tr>
       </table>
