--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -8,10 +8,10 @@
               <td colspan="6">
                 <table style="border-collapse:collapse;" align="left">
                   <tr>
-                    <td colspan="2" class="td_caption">Informations</td>
+                    <td colspan="2" class="td_caption">System Information</td>
                   </tr>
                   <tr>
-                    <td class="td_search_1" style="width:100px;">Users total :</td>
+                    <td class="td_search_1" style="width:100px;">Number of users:</td>
                     <td class="td_search_2">{$total_users}</td>
                   </tr>
 				{section name=i loop=$order_totals}
