--- a/templates/admin/sidebar.html
+++ b/templates/admin/sidebar.html
@@ -43,7 +43,7 @@
         <tr><td class="middle_sidebar_table" style="height:10px;"></td></tr>
         
         <tr><td class="top_sidebar_table">Banned IP's</td></tr>
-        <tr><td class="middle_sidebar_table"><a href="banned.php?pf=ip">&raquo; Banned Ip Address</a></td></tr>
+        <tr><td class="middle_sidebar_table"><a href="banned.php?pf=ip">&raquo; Banned IP Addresses</a></td></tr>
         <tr><td class="middle_sidebar_table"><a href="banned.php?pf=country">&raquo; Banned Country</a></td></tr>
         <tr><td class="middle_sidebar_table" style="height:10px;"></td></tr>
         
