--- a/templates/admin/user.html
+++ b/templates/admin/user.html
@@ -1,6 +1,6 @@
 {include file="admin/header.html"}
 {literal}
-<script language="javascript">
+<script>
 checked = false;
   function checkedAll (frm1) {
 	var aa= document.getElementById('frm1');
