--- a/templates/header.html
+++ b/templates/header.html
@@ -91,8 +91,8 @@
     <td>
       <table align="left" style="margin-left:10px;">
         <tr>
-          <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
-            Welcome to Member area
+          <td class="masthead-text">
+            Member area
           </td>
         </tr>
       </table>
