--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
             </tr>
             {if !$orders}
             <tr>
-              <td colspan="6" style="font-size:11px;text-align:center;color:red;">
-                ======== There's no order data ========
+              <td colspan="6" class="generic-warning">
+                  There's no order data
               </td>
             </tr>
             {else}
