--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="lib/js/jquery.tooltip.css" />
 	<script src="lib/js/lib/jquery.js" type="text/javascript"></script>
 	<script src="lib/js/jquery.tooltip.js" type="text/javascript"></script>  
+	<script src="aros.js" type="text/javascript"></script>
   {literal}
 	<style>
 	  .td1_tooltip {
@@ -21,34 +22,6 @@
 	  }
 	</style>
 	<title>My ArOS - {$site_name}</title>
-  <script type="text/javascript">
-  $(function() {
-  var dumy='';
-  $(".view_detail").tooltip({
-    delay: 200,
-    position: 'mouse',
-      bodyHandler: function() {
-      
-      var send = $(this).attr('ajaxurl');
-      $.ajax({
-      url:send,
-      type:'post',
-      success:function(msg){
-         dumy = msg; 
-         
-      },
-	  async:   false
-
-      });
-      
-  		return dumy;
-  	},
-    top: -15,
-  	left: 5,
-    showCFG_SITE_URL: false
-  });
-  });
-  </script>
   {/literal}	
 </head>
 <body>
