--- a/templates/admin/header.html
+++ b/templates/admin/header.html
@@ -1,4 +1,5 @@
 <!-- begin :: header -->
+<!DOCTYPE HTML>
 <html>
 <head>
 <link href="../style.css" rel="stylesheet" type="text/css" />
@@ -16,7 +17,7 @@
     <table align="right">
         <tr>
           <td>
-            <div style="color:#003366;padding-right:10px;font-size:20px;font-family:'arial black';">{$site_name}</div>
+            <div class="site-name">{$site_name}</div>
           </td>
         </tr>
       </table>
