--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -6,22 +6,7 @@
 	<link rel="stylesheet" href="lib/js/jquery.tooltip.css" />
 	<script src="lib/js/lib/jquery.js" type="text/javascript"></script>
 	<script src="lib/js/jquery.tooltip.js" type="text/javascript"></script>  
-  {literal}
-	<style>
-	  .td1_tooltip {
-		font-size: 11px;
-		font-family: arial;
-		font-weight: bold;
-		text-align: right;
-	  }
-	  .td2_tooltip {
-		font-size: 11px;
-		font-family: arial;
-		text-align: left;
-	  }
-	</style>
-	<title>My ArOS - {$site_name}</title>
-  {/literal}	
+  <title>My ArOS - {$site_name}</title>
 </head>
 <body>
 <table align="center" class="table_body">
@@ -30,7 +15,7 @@
       <table align="right">
         <tr>
           <td>
-            <div style="color:#003366;padding-right:10px;font-size:20px;font-family:'arial black';">{$site_name}</div>
+            <div class="site-name">{$site_name}</div>
           </td>
         </tr>
       </table>
@@ -41,14 +26,14 @@
     <td>
       <table align="left" style="margin-left:10px;">
         <tr>
-          <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
+          <td  class="masthead-text">
             Login to Member area
           </td>
         </tr>
       </table>
       <table align="right" style="margin-right:10px;">
         <tr>
-          <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
+          <td  class="masthead-text">
             <a href='login.php'>Login</a> | <a href='register.php'>Sign Up</a>
           </td>
         </tr>
@@ -70,7 +55,7 @@
       </table>
       <table align="right" style="margin-right:10px;">
         <tr>
-          <td style="font-family:trebuchet ms;font-size:11px;height:25px;color:#000000;">
+          <td  class="masthead-text">
             Logged in as <b>{$sessions_username}</b> | <a href='index.php'>home</a> | {if $admin_autenticated == 1}<a href='admin/'>admin area</a> | {/if}<a href='logout.php'>logout</a>
           </td>
         </tr>
