--- a/templates/admin/header.html
+++ b/templates/admin/header.html
@@ -1,5 +1,5 @@
 <!-- begin :: header -->
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
 <link href="../style.css" rel="stylesheet" type="text/css" />
